--- a/templates/dashboard/add-product.html
+++ b/templates/dashboard/add-product.html
@@ -29,22 +29,28 @@
                                     </ul>
                                 </div>
                                 <!-- form-add-product -->
-                                <form class="tf-section-2 form-add-product" >
+                                <form class="tf-section-2 form-add-product" method="POST" action=".">
+                                    {% csrf_token %}
                                     <div class="wg-box">
                                         <fieldset class="name">
                                             <div class="body-title mb-10">Product name <span class="tf-color-1">*</span></div>
-                                            <input class="mb-10" type="text" placeholder="Enter product name" name="text" tabindex="0" value="" aria-required="true" required="">
+                                            {{ add_produit_form.name }}<!--<input class="mb-10" type="text" placeholder="Enter product name" name="name" tabindex="0" value="" aria-required="true" required="">-->
                                             <div class="text-tiny">Do not exceed 20 characters when entering the product name.</div>
+                                        </fieldset>
+                                        <fieldset class="name">
+                                            <div class="body-title mb-10">Price <span class="tf-color-1">*</span></div>
+                                            {{ add_produit_form.prix }}<!--<input class="mb-10" type="number" placeholder="" name="prix" tabindex="0" value="" aria-required="true" required="">-->
                                         </fieldset>
                                         <div class="gap22 cols">
                                             <fieldset class="category">
                                                 <div class="body-title mb-10">Category <span class="tf-color-1">*</span></div>
                                                 <div class="select">
-                                                    <select class="">
+                                                    {{ add_produit_form.categorie }}
+                                                    <!--<select class="">
                                                         <option>Choose category</option>
                                                         <option>Shop</option>
                                                         <option>Product</option>
-                                                    </select>
+                                                    </select>-->
                                                 </div>
                                             </fieldset>
                                             <!--<fieldset class="male">
@@ -58,7 +64,7 @@
                                                 </div>
                                             </fieldset>-->
                                         </div>
-                                        <fieldset class="brand">
+                                        <!--<fieldset class="brand">
                                             <div class="body-title mb-10">Brand <span class="tf-color-1">*</span></div>
                                             <div class="select">
                                                 <select class="">
@@ -67,7 +73,7 @@
                                                     <option>Product</option>
                                                 </select>
                                             </div>
-                                        </fieldset>
+                                        </fieldset>-->
                                         <fieldset class="description">
                                             <div class="body-title mb-10">Description <span class="tf-color-1">*</span></div>
                                             <textarea class="mb-10" name="description" placeholder="Description" tabindex="0" aria-required="true" required=""></textarea>
@@ -85,12 +91,13 @@
                                                     <img src="{% static 'images/upload/upload-2.png' %}" alt="">
                                                 </div>
                                                 <div class="item up-load">
+                                                    {{ add_produit_form.img_produit }}
                                                     <label class="uploadfile" for="myFile">
                                                         <span class="icon">
                                                             <i class="icon-upload-cloud"></i>
                                                         </span>
                                                         <span class="text-tiny">Drop your images here or select <span class="tf-color">click to browse</span></span>
-                                                        <input type="file" id="myFile" name="filename">
+                                                        <!--<input type="file" id="myFile" name="filename">-->
                                                     </label>
                                                 </div>
                                             </div>
