--- a/templates/dashboard/new-category.html
+++ b/templates/dashboard/new-category.html
@@ -30,22 +30,23 @@
             </div>
             <!-- new-category -->
             <div class="wg-box">
-                <form class="form-new-product form-style-1" method="POST" action="{% url 'add_category' %}" enctype="multipart/form-data">
+                <form class="form-new-product form-style-1" method="POST" enctype="multipart/form-data">
                     {% csrf_token %}
                     <fieldset class="name">
                         <div class="body-title">Product name <span class="tf-color-1">*</span></div>
-                        <input class="flex-grow" type="text" placeholder="Category name" name="name" tabindex="0" aria-required="true" required>
+                        {{add_categorie_form.name}}<!--<input class="flex-grow" type="text" placeholder="Category name" name="name" tabindex="0" aria-required="true" required>-->
                     </fieldset>
                     <fieldset>
                         <div class="body-title">Upload images <span class="tf-color-1">*</span></div>
                         <div class="upload-image flex-grow">
                             <div class="item up-load">
+                                {{add_categorie_form.img_categorie}}
                                 <label class="uploadfile" for="myFile">
                                     <span class="icon">
                                         <i class="icon-upload-cloud"></i>
                                     </span>
                                     <span class="body-text">Drop your images here or select <span class="tf-color">click to browse</span></span>
-                                    <input type="file" id="myFile" name="filename">
+                                    <!--<input type="file" id="myFile" name="filename">-->
                                 </label>
                             </div>
                         </div>
