--- a/templates/front/login.html
+++ b/templates/front/login.html
@@ -260,29 +260,30 @@
                 <div class="col-lg-12">
                     <div class="registration-wrapper-1">
                         <div class="logo-area mb--0">
-                            <img class="mb--10" src="assets/images/logo/fav.png" alt="logo">
+                            <img class="mb--10" src="{% static 'front/images/logo/fav.png' %}" alt="logo">
                         </div>
                         <h3 class="title">Login Into Your Account</h3>
-                        <form action="#" class="registration-form">
+                        <form action="{% url 'login' %}" class="registration-form" method="POST">
+                            {% csrf_token %}
                             <div class="input-wrapper">
                                 <label for="email">Email*</label>
-                                <input type="email" id="email">
+                                <input type="email" id="email" name="email" required>
                             </div>
                             <div class="input-wrapper">
                                 <label for="password">Password*</label>
-                                <input type="password" id="password">
+                                <input type="password" id="password" name="password">
                             </div>
-                            <button class="rts-btn btn-primary">Login Account</button>
+                            <button class="rts-btn btn-primary" type="submit">Login Account</button>
                             <div class="another-way-to-registration">
                                 <div class="registradion-top-text">
                                     <span>Or Register With</span>
                                 </div>
                                 <div class="login-with-brand">
                                     <a href="#" class="single">
-                                        <img src="assets/images/form/google.svg" alt="login">
+                                        <img src="{% static 'front/images/form/google.svg' %}" alt="login">
                                     </a>
                                     <a href="#" class="single">
-                                        <img src="assets/images/form/facebook.svg" alt="login">
+                                        <img src="{% static 'front/images/form/facebook.svg' %}" alt="login">
                                     </a>
                                 </div>
                                 <p>Already Have Account? <a href="#">Login</a></p>
