--- a/templates/front/login.html
+++ b/templates/front/login.html
@@ -286,7 +286,7 @@
                                         <img src="{% static 'front/images/form/facebook.svg' %}" alt="login">
                                     </a>
                                 </div>
-                                <p>Already Have Account? <a href="#">Login</a></p>
+                                <p>Already Have Account? <a href="{% url 'register' %}">Register</a></p>
                             </div>
                         </form>
                     </div>
