--- a/templates/front/header.html
+++ b/templates/front/header.html
@@ -395,7 +395,7 @@
                     <li><a class="sub-b" href="{% url 'invoice' %}">Invoice</a></li>
                     <li><a class="sub-b" href="{% url 'contact' %}">Contact</a></li>
                     <li><a class="sub-b" href="{% url 'register' %}">Register</a></li>
-                    <li><a class="sub-b" href="{% url 'login' %"}>Login</a></li>
+                    <!--<li><a class="sub-b" href="{% url 'login_front' %}">Login</a></li>-->
                     <li><a class="sub-b" href="{% url 'privacy_policy' %}">Privacy Policy</a></li>
                     <li><a class="sub-b" href="{% url 'cookies_policy' %}">Cookies Policy</a></li>
                     <li><a class="sub-b" href="{% url 'terms_condition' %}">Terms & Condition</a></li>
@@ -412,6 +412,9 @@
                 </ul>
             </li>
             <li class="parent"><a href="{% url 'contact' %}">Contact</a></li>
+            {% if request.user.is_authenticated %}
+                <li><a class="nav-link" href="{% url 'logout_front' %}">Logout</a></li>
+            {% endif %}
         </ul>
     </nav>
 </div>
