--- a/templates/front/cart.html
+++ b/templates/front/cart.html
@@ -285,7 +285,7 @@
                                 <p>SubTotal</p>
                             </div>
                         </div> 
-                        {% for commande_produit in commande %}
+                        {% for commande_produit in commande_produits %}
                         <div class="single-cart-area-list main item-parent">
                             <div class="product-main-cart">
                                 <div class="close section-activation">
@@ -380,18 +380,6 @@
     </div>
     <!-- rts cart area end -->
       
-
-
-
-
-
-
-
-
-
-
-
-
     <div class="rts-shorts-service-area rts-section-gap bg_primary">
         <div class="container">
             <div class="row g-5">
