--- a/templates/front/index.html
+++ b/templates/front/index.html
@@ -56,7 +56,7 @@
                     >
                   </li>
                   <li>
-                    <a class="mobile-menu-link" href="{% url 'login' %}">Login</a>
+                    <a class="mobile-menu-link" href="{% url 'login_front' %}">Login</a>
                   </li>
                   <li>
                     <a class="mobile-menu-link" href="{% url 'privacy_policy' %}"
@@ -282,7 +282,7 @@
       </div>
     </div>
     <div class="buton-area-bottom">
-      <a href="{% url 'login' %}" class="rts-btn btn-primary">Sign In</a>
+      <a href="{% url 'login_front' %}" class="rts-btn btn-primary">Sign In</a>
       <a href="{% url 'register' %}" class="rts-btn btn-primary">Sign Up</a>
     </div>
   </div>
