--- a/templates/dashboard/header_dashboard.html
+++ b/templates/dashboard/header_dashboard.html
@@ -226,7 +226,7 @@
                                                 </a>
                                             </li>
                                             <li class="sub-menu-item">
-                                                <a href="{% url 'login' %}" class="">
+                                                <a href="{% url 'login_dashboard' %}" class="">
                                                     <div class="text">Login</div>
                                                 </a>
                                             </li>
@@ -835,7 +835,7 @@
                                                 </a>
                                             </li>
                                             <li>
-                                                <a href="{% url 'login' %}" class="user-item">
+                                                <a href="{% url 'login_dashboard' %}" class="user-item">
                                                     <div class="icon">
                                                         <i class="icon-log-out"></i>
                                                     </div>
