--- a/templates/dashboard/index_dashboard.html
+++ b/templates/dashboard/index_dashboard.html
@@ -426,7 +426,7 @@
                                                 </a>
                                             </li>
                                             <li>
-                                                <a href="{% url 'login' %}" class="user-item">
+                                                <a href="{% url 'login_dashboard' %}" class="user-item">
                                                     <div class="icon">
                                                         <i class="icon-log-out"></i>
                                                     </div>
