--- a/templates/dashboard/sign-up.html
+++ b/templates/dashboard/sign-up.html
@@ -51,7 +51,7 @@
                                     <label class="body-text" for="signed">Agree with Privacy Policy</label>
                                 </div>
                             </div>
-                            <a href="{% url 'login' %}" class="tf-button w-full">Login</a>
+                            <a href="{% url 'login_dashboard' %}" class="tf-button w-full">Login</a>
                         </form>
                         <div>
                             <div class="text-tiny mb-16 text-center">Or continue with social account</div>
@@ -92,7 +92,7 @@
                         </div>
                         <div class="body-text text-center">
                             You have an account?
-                            <a href="{% url 'login' %}" class="body-text tf-color">Login Now</a>
+                            <a href="{% url 'login_dashboard' %}" class="body-text tf-color">Login Now</a>
                         </div>
                     </div>
                 </div>
