--- a/templates/dashboard/all-user.html
+++ b/templates/dashboard/all-user.html
@@ -41,7 +41,7 @@
                                                 </div>
                                             </form>
                                         </div>
-                                        <a class="tf-button style-1 w208" href="{% url 'add-new-user' %}"><i class="icon-plus"></i>Add new</a>
+                                        <a class="tf-button style-1 w208" href="{% url 'add_new_user' %}"><i class="icon-plus"></i>Add new</a>
                                     </div>
                                     <div class="wg-table table-all-user">
                                         <ul class="table-title flex gap20 mb-14">
