--- a/templates/dashboard/header_dashboard.html
+++ b/templates/dashboard/header_dashboard.html
@@ -77,7 +77,7 @@
                                         <ul class="sub-menu">
                                             <li class="sub-menu-item">
                                                 <a href="{% url 'index' %}" class="">
-                                                    <div class="text">Home 01</div>
+                                                    <div class="text">Front</div>
                                                 </a>
                                             </li>
                                             <li class="sub-menu-item">
@@ -835,7 +835,7 @@
                                                 </a>
                                             </li>
                                             <li>
-                                                <a href="{% url 'login_dashboard' %}" class="user-item">
+                                                <a href="{% url 'logout_dashboard' %}" class="user-item">
                                                     <div class="icon">
                                                         <i class="icon-log-out"></i>
                                                     </div>
