--- a/templates/dashboard/home-2.html
+++ b/templates/dashboard/home-2.html
@@ -153,6 +153,7 @@
                                                 </ul>
                                             </div>
                                         </div>
+                                        <div class="wg-table table-orders-1">
                                         <div class="wg-table table-top-selling-product">
                                             <ul class="table-title flex gap20 mb-14">
                                                 <li>
@@ -168,89 +169,30 @@
                                                     <div class="body-title">Stock</div>
                                                 </li>
                                             </ul>
-                                            <div class="divider mb-14"></div>
                                             <ul class="flex flex-column gap10">
-                                                <li class="product-item gap14">
-                                                    <div class="image">
-                                                        <img src="{% static 'images/products/16.png' %}" alt="">
-                                                    </div>
-                                                    <div class="flex items-center justify-between flex-grow">
-                                                        <div class="name">
-                                                            <a href="{% url 'product_list' %}" class="body-title-2">Patimax Fragrance Long...</a>
-                                                        </div>
-                                                        <div class="body-text">X1</div>
-                                                        <div class="body-text">$28,672.36</div>
-                                                        <div>
-                                                            <div class="block-not-available">Out of stock</div>
-                                                        </div>
-                                                    </div>
-                                                </li>
-                                                <li class="divider"></li>
-                                                <li class="product-item gap14">
-                                                    <div class="image">
-                                                        <img src="{% static 'images/products/17.png' %}" alt="">
-                                                    </div>
-                                                    <div class="flex items-center justify-between flex-grow">
-                                                        <div class="name">
-                                                            <a href="{% url 'product_list' %}" class="body-title-2">WholeHearted Grain Free Large...</a>
-                                                        </div>
-                                                        <div class="body-text">X1</div>
-                                                        <div class="body-text">$28,672.36</div>
-                                                        <div>
-                                                            <div class="block-available">In stock</div>
-                                                        </div>
-                                                    </div>
-                                                </li>
-                                                <li class="divider"></li>
-                                                <li class="product-item gap14">
-                                                    <div class="image">
-                                                        <img src="{% static 'images/products/18.png' %}" alt="">
-                                                    </div>
-                                                    <div class="flex items-center justify-between flex-grow">
-                                                        <div class="name">
-                                                            <a href="{% url 'product_list' %}" class="body-title-2">Dog Food Rachael Ray Nutrish®</a>
-                                                        </div>
-                                                        <div class="body-text">X1</div>
-                                                        <div class="body-text">$28,672.36</div>
-                                                        <div>
-                                                            <div class="block-available">In stock</div>
-                                                        </div>
-                                                    </div>
-                                                </li>
-                                                <li class="divider"></li>
-                                                <li class="product-item gap14">
-                                                    <div class="image">
-                                                        <img src="{% static 'images/products/19.png' %}" alt="">
-                                                    </div>
-                                                    <div class="flex items-center justify-between flex-grow">
-                                                        <div class="name">
-                                                            <a href="{% url 'product_list' %}" class="body-title-2">Freshpet Healthy Dog Food and Cat...</a>
-                                                        </div>
-                                                        <div class="body-text">X1</div>
-                                                        <div class="body-text">$28,672.36</div>
-                                                        <div>
-                                                            <div class="block-available">In stock</div>
-                                                        </div>
-                                                    </div>
-                                                </li>
-                                                <li class="divider"></li>
-                                                <li class="product-item gap14">
-                                                    <div class="image">
-                                                        <img src="{% static 'images/products/20.png' %}" alt="">
-                                                    </div>
-                                                    <div class="flex items-center justify-between flex-grow">
-                                                        <div class="name">
-                                                            <a href="{% url 'product_list' %}" class="body-title-2">Natural Dog Food Healthy Dog Food</a>
-                                                        </div>
-                                                        <div class="body-text">X1</div>
-                                                        <div class="body-text">$28,672.36</div>
-                                                        <div>
-                                                            <div class="block-not-available">Out of stock</div>
-                                                        </div>
-                                                    </div>
-                                                </li>
+                                                {% for produit in produits %}
+                                                    {% if produit.best_seller == True %}
+                                                        <li class="product-item gap14">
+                                                            <div class="image">
+                                                                <img src="{{ produit.img_produit.url }}" alt="">
+                                                            </div>
+                                                            <div class="flex items-center justify-between flex-grow">
+                                                                <div class="name">
+                                                                    <a href="{% url 'product_list' %}" class="body-title-2">{{produit.name}}</a>
+                                                                </div>
+                                                                <div class="body-text">{{produit.categorie}}</div>
+                                                                <div class="body-text">${{produit.prix}}</div>
+                                                                <div>
+                                                                    <div class="block-not-available">Out of stock</div>
+                                                                </div>
+                                                            </div>
+                                                        </li>
+                                                        <li class="divider"></li>
+                                                    {% endif %}
+                                                {% endfor %}
                                             </ul>
                                         </div>
+                                    </div>
                                     </div>
                                     <!-- /product-overview -->
                                     <!-- orders -->
